# FFmpegFilter

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_filter_display.glsl  vertex_filter_display.glsl
app/src/main/cpp/: AVCallback.cpp  AVCallback.h  AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  CommonDefine.h  EGLDisplayYUV.cpp  EGLDisplayYUV.h  FFmpegPlayer.cpp  FFmpegPlayer.h  GlobalContexts.cpp  GlobalContexts.h  LogUtils.cpp  LogUtils.h  SafeQueue.cpp  SafeQueue.h  ShaderUtils.cpp  ShaderUtils.h  ShaderYUV.cpp  ShaderYUV.h  VideoChannel.cpp  VideoChannel.h  VideoFilter.cpp  VideoFilter.h  native-lib.cpp
app/src/main/java/com/soft/ffmpegfilter/: MainActivity.java
app/src/main/java/com/soft/function/: BaseActivity.java  FunctionControl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
